test/trafficgen/kapinger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapinger-good
  namespace: default
spec:
  replicas: 10
  selector:
    matchLabels:
      app: kapinger
  template:
    metadata:
      labels:
        app: kapinger
        server: good
    spec:
      serviceAccountName: kapinger-sa
      containers:
        - name: kapinger
          image: acnpublic.azurecr.io/kapinger:20241009.5
          resources:
            limits:
              memory: 20Mi
            requests:
              memory: 20Mi
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapinger-bad
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kapinger
  template:
    metadata:
      labels:
        app: kapinger
        server: bad
    spec:
      serviceAccountName: kapinger-sa
      containers:
        - name: kapinger
          image: ghcr.io/microsoft/retina/kapinger:latest
          resources:
            limits:
              memory: 20Mi
            requests:
              memory: 20Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kapinger-service
  namespace: default
  labels:
    app: kapinger
spec:
  selector:
    app: kapinger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
