test/trafficgen/deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      # agnhost: b
      server: bad
  policyTypes:
  - Ingress
